--- a/example/build.gradle
+++ b/example/build.gradle
@@ -33,6 +33,8 @@ android {
         debug {
             versionNameSuffix ".debug"
             debuggable true
+            minifyEnabled false
+            shrinkResources false
             signingConfig signingConfigs.debug
         }
 
